--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ h1,h2,h3,h4,h5,h6{
 }
 
 
-header.masthead {
+.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
   background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../img/sjce.jpg");
@@ -41,25 +41,25 @@ header.masthead {
   background-attachment: scroll;
   background-size: cover;
 }
-header.masthead h1 {
+.masthead h1 {
   font-size: 3rem;
 }
 @media (min-width: 992px) {
-  header.masthead {
+  .masthead {
     height: 100vh;
     min-height: 40rem;
     padding-top: 4.5rem;
     padding-bottom: 0;
   }
-  header.masthead p {
+  .masthead p {
     font-size: 1.15rem;
   }
-  header.masthead h1 {
+  .masthead h1 {
     font-size: 5rem;
   }
 }
 @media (min-width: 1200px) {
-  header.masthead h1 {
+  .masthead h1 {
     font-size: 5rem;
   }
 }
@@ -161,16 +161,15 @@ a.link:hover{
 
 footer{
   width: auto;
-  height: 125px;
   background-color: rgba(92, 77, 66, 0.3);
 }
 .dsclogo{
   height:auto;
-  width:400px;
+  width:90%;
   display: inline-block;
 }
 img.logo{
-    width: 400px;
+    width: 90%;
     height: auto;
 
 }
@@ -179,8 +178,6 @@ img.logo{
   font-family: Tahoma;
   display: inline-block;
   font-size: 15px;
-  height: auto;
-  width: 400px;
 }
 .copyright-claim{
   color: #rgba(255,255, 255,1);
@@ -188,6 +185,4 @@ img.logo{
   display: inline-block;
   font-size: 15px;
   height: auto;
-  width: 400px;
-  padding: 50px;
 }
