Fixed bugs in CSS

--- a/css/styles.css
+++ b/css/styles.css
@@ -175,7 +175,7 @@ img.logo{
 
 }
 .develop-by{
-  color: #rgba(255,255, 255,1);
+  color: #FFFFFF;
   font-family: Tahoma;
   display: inline-block;
   font-size: 15px;
@@ -183,7 +183,7 @@ img.logo{
   width: 400px;
 }
 .copyright-claim{
-  color: #rgba(255,255, 255,1);
+  color: #FFFFFF;
   font-family: Tahoma;
   display: inline-block;
   font-size: 15px;
