--- a/css/styles.css
+++ b/css/styles.css
@@ -141,30 +141,75 @@ h1,h2,h3,h4,h5,h6{
 header{
   width: auto;
   height: 75px;
-  background-color: #111111;
+  background-color: rgba(0,98,155);
 
 }
-.home-bar{
-  padding-top: 20px
+.logo-container{
+  width: 85px;
+  display: -webkit-inline-flex;
+
 }
-a.link{
+img.ieee-logo{
+  height:75px;
+  width:auto;
+  margin-left: 10px;
+}
+
+.topnav {
+  background-color:none;
+  padding: 10px;
+  margin-left: 100px;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.topnav a {
+  float: left;
+  display: block;
   color: #ffffff;
   font-family: Tahoma;
   font-weight: bold;
-  font-size: 20px;
-  margin: 10px;
-  padding-left: 60px;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
-a.link:hover{
-  text-decoration:none;
-  font-style: italic;
-  font-style: oblique;
-  color: rgba(210,105,30,1);
+
+.topnav a:hover {
+  background-color: #ffffff;
+  color: black;
+}
+.topnav a.active {
+  background-color: #ffffff;
+  color: #000000;
+}
+.topnav .icon {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 
 footer{
   width: auto;
-  background-color: #75787B	;
+  background-color: rgba(0,98,155);
 }
 .dsclogo{
   height:auto;
@@ -179,15 +224,8 @@ img.logo{
 .develop-by{
   color: #FFFFFF;
   font-family: Tahoma;
-  display: inline-block;
+  display: inline;
   font-size: 15px;
-}
-.copyright-claim{
-  color: #FFFFFF;
-  font-family: Tahoma;
-  display: inline-block;
-  font-size: 15px;
-  height: auto;
 }
 
 .text-grey{
@@ -204,4 +242,15 @@ hr.divider-light {
   max-width: 3.25rem;
   border-width: 0.2rem;
   border-color: #dddddd	;
+}
+a.d-block{
+  color: #000000;
+  font-family: Tahoma;
+  font-weight: normal;
+}
+a.d-block:hover{
+  color: #000000;
+  font-family: Tahoma;
+  font-weight: bold;
+  text-decoration: none;
 }
