--- a/css/styles.css
+++ b/css/styles.css
@@ -151,17 +151,15 @@ header {
   z-index: 99;
   width: 100%;
   padding: 10px;
-  height: 90px;
   background-color: rgba(0, 98, 155);
 }
 
 .logo-container {
-  width: 85px;
   display: -webkit-inline-flex;
 }
 
 img.ieee-logo {
-  height: 75px;
+  height: 40px;
   width: auto;
   margin-left: 10px;
 }
@@ -178,9 +176,8 @@ img.ieee-logo {
   font-family: Tahoma;
   font-weight: bold;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 13px;
   text-decoration: none;
-  font-size: 16px;
 }
 
 .topnav a:hover {
@@ -197,13 +194,13 @@ img.ieee-logo {
   display: none;
 }
 
-@media screen and (min-width: 990px) {
+@media screen and (min-width: 1462px) {
   .logo-container {
     float: right;
   }
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 1462px) {
   .topnav a:not(:first-child) {
     display: none;
   }
@@ -308,4 +305,40 @@ p.font-weight-bold {
 .carousel-inner .card {
   background-color: #FFF4E6;
   opacity: 0.9;
+}
+
+#myBtn {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Fixed/sticky position */
+  bottom: 20px;
+  /* Place the button at the bottom of the page */
+  right: 30px;
+  /* Place the button 30px from the right */
+  z-index: 99;
+  /* Make sure it does not overlap */
+  border: none;
+  /* Remove borders */
+  outline: none;
+  /* Remove outline */
+  color: white;
+  /* Text color */
+  cursor: pointer;
+  /* Add a mouse pointer on hover */
+  padding: 10px;
+  /* Some padding */
+  border-radius: 10px;
+  /* Rounded corners */
+  font-size: 18px;
+  /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #555;
+  /* Add a dark-grey background on hover */
+}
+
+.about-buttons .about {
+  width: 80%;
 }
